src/kitemviews/kfileitemlistview.h
@@ -81,9 +81,6 @@ public:
     virtual QHash<QByteArray, QSizeF> visibleRolesSizes(const KItemRangeList& itemRanges) const;
 
     /** @reimp */
-    virtual bool supportsItemExpanding() const;
-
-    /** @reimp */
     virtual QPixmap createDragPixmap(const QSet<int>& indexes) const;
 
 protected:
